# horo-aiogram-bot

./: .env_example  .gitignore  Makefile  README.md  main.py  pyproject.toml
config/: bot.py  db.py  scheduler.py
handlers/: callbacks.py  commands.py  db_handlers.py
keyboards/: horo.py
texts/: horo_text.py  signs_info.py
utils/: horo.py  messages.py
