[tool.poetry]
name = "horo-aiogram-bot"
version = "0.1.0"
description = ""
authors = ["Pavel Drovnin <pavel98rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
aiogram = "^3.13.1"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
apscheduler = "^3.10.4"
beautifulsoup4 = "^4.12.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
